--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>This is my first repo</h1>
     <h1> My first dream</h1>
+    <h2>I writing a code</h2>
+    <h2>I throw a stone</h2>
+    <h3>I watching clock</h3>
+    <h4>I go to the market</h4>
 </body>
 
 </html>
